@startuml
left to right direction

package threadServlet{
	class ThreadServlet{
		+doGet()
		+doPost()
	}

	class ThreadDeleteServlet{
		+doGet()
		+doPost()
	}
}

package threadModel{
	class Thread{
		-tid
		-name
		-mainText
		-insertTime
	}

	class ThreadDAO{
		+findAll() : thread
		+findByTid(int tid) : thread
		+inserrt(Thread t)
		+delete(Tread t)
	}


	ThreadServlet ..> ThreadDAO
	ThreadDeleteServlet ..> ThreadDAO

	ThreadDAO ..> Thread
}

@enduml